syntax = "proto3";

package org.shoplify.storage;

option java_multiple_files = true;
option java_package = "org.shoplify.storage";
option java_outer_classname = "Storage";


message ProductMetadata{
  optional float unit_price = 1;
  repeated string available_countries = 2;
  repeated string categories = 3;
}
